# orangeslam

./: CMakeLists.txt  README.md  getresult.sh  getresult_openloris.sh
app/: CMakeLists.txt  run_orange_slam.cpp
build_old/: tum_poses_-1_0927_1651.txt  tum_poses_-1_0927_1740good.txt  tum_poses_-1_0928_1156.txt  tum_poses_-1_0928_1216.txt  tum_poses_-1_0928_1228.txt  tum_poses_-1_0928_1816.txt  tum_poses_-1_0928_1856.txt  tum_poses_-1_0928_1935.txt  tum_poses_-1_0928_1951.txt  tum_poses_-1_0928_1959.txt  tum_poses_-4_0920_2104.txt  tum_poses_-4_0920_2130.txt  tum_poses_00_0820_2310.txt  tum_poses_03_0820_2355.txt  tum_poses_04_0820_2357.txt  tum_poses_10_0820_2327.txt
config/: default.yaml
include/orangeslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  count_time.h  dataset.h  fdetect.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h  yolofastestv2.h
ncnnlib/include/ncnn/: platform.h
ncnnlib/lib/pkgconfig/: ncnn.pc
result/: kitti00_1.txt  kitti00_1_map.eps  kitti00_1_raw.eps  kitti03_1.txt  kitti03_1_map.eps  kitti03_1_raw.eps  kitti04_1.txt  kitti04_1_map.eps  kitti04_1_raw.eps  kitti05_1.txt  kitti05_1_map.eps  kitti05_1_raw.eps  kitti05_2 .txt  kitti05_2_map.eps  kitti05_2_raw.eps  kitti08_1.txt  kitti08_1_map.eps  kitti08_1_raw.eps  kitti10_1.txt  kitti10_1_map.eps  kitti10_1_raw.eps  openloriscorridor1-4.txt  openloriscorridor1-4_corridor1-4_map.eps  openloriscorridor1-4_corridor1-4_raw.eps  openlorismarket1-1.txt  openlorismarket1-1_market1-1_map.eps  openlorismarket1-1_market1-1_nf_map.eps  openlorismarket1-1_market1-1_nf_raw.eps  openlorismarket1-1_market1-1_raw.eps  openlorismarket1-1_market1-2_nf_map.eps  openlorismarket1-1_market1-2_nf_raw.eps  openlorismarket1-1_market1-3_nf_map.eps  openlorismarket1-1_market1-3_nf_raw.eps  openlorismarket1-1_nf.txt  tum_poses_05_0820_2334.txt  tum_poses_05_0821_1802.txt  tum_poses_08_0821_2044.txt
result/kitti10_1/: distances.npy  distances_from_start.npy  error_array.npy  info.json  stats.json  timestamps.npy
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  fdetect.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp  yolofastestv2.cpp
